# lem_in

./: Makefile  R4  README.md  a.out  check-gnl1.c  check-gnl2.c  check_gnl.c  check_queue.c  fun_hash.c  fun_vertex.c  graph.c  hash.c  lem-in  lem-in-who  lem-in3.c  lem_in.h  que.c  queue1.c  r3  read_map.c  test.map
a.out.dSYM/Contents/Resources/DWARF/: a.out
lem-in-who.dSYM/Contents/: Info.plist
lem-in-who.dSYM/Contents/Resources/DWARF/: lem-in-who
lem-in.dSYM/Contents/Resources/DWARF/: lem-in
maps/: 001.map  002.map  01.map  02.map  10.map  10nodes.map  11.map  11letters.map  12.map  14.map  5.map  6.map  6bad.map  6map_desr  7.map  8.map  9.map  empty.map  gen1.map  gen2.map  going  out  out_who  r5  r6  r7
maps/valid/vs/multiple_ways/: 9.map
my_libft/: Makefile  arithm.c  ft_atoi.c  get_next_line_.c  get_next_line_fig.c  libft.h
ogeonosi/: CMakeLists.txt  a.out  a.t  dfs.c  graph.c  hash.c  init.c  lem_in.c  lem_in.h  link.c  read_map.c  stack_func.c  vertex.c
ogeonosi/my_libft/: Makefile
src/: a.out  bfs.c  bfs_0.c  delete_farm1.c  delete_farm2.c  delete_farm3.c  dfs.c  find_other_paths.c  fun_del.c  fun_hash.c  fun_init1.c  fun_init2.c  fun_init_del.c  fun_linked_list.c  fun_print.c  fun_print1.c  fun_stack1.c  fun_vertex.c  lem-in3.c  lem_in.c  paths1.c  paths2.c  paths3.c  paths4.c  paths_print.c  que.c  queue1.c  read_map.c  read_map1.c  read_map2.c  read_map3.c  read_map4.c  short_circuit.c  work_with_bfs.c
src/a.out.dSYM/Contents/Resources/DWARF/: a.out
visual/: canvas.js  data.json  lem_in_vis.c  visual.h  visual1.c  visual2.c
