cmake_minimum_required(VERSION 3.16)
project(ogeonosi C)

set(CMAKE_C_STANDARD 11)

include_directories(.)
include_directories(my_libft)

add_executable(ogeonosi
        my_libft/arithm.c
        my_libft/check_inf_nan1.c
        my_libft/check_inf_nan2.c
        my_libft/ft_atoi.c
        my_libft/ft_bzero.c
        my_libft/ft_factorial.c
        my_libft/ft_first_decimal.c
        my_libft/ft_isalnum.c
        my_libft/ft_isalpha.c
        my_libft/ft_isascii.c
        my_libft/ft_isdigit.c
        my_libft/ft_isprint.c
        my_libft/ft_itoa.c
        my_libft/ft_lstadd.c
        my_libft/ft_lstdel.c
        my_libft/ft_lstdelone.c
        my_libft/ft_lstiter.c
        my_libft/ft_lstmap.c
        my_libft/ft_lstnew.c
        my_libft/ft_lstnew_gnl.c
        my_libft/ft_memalloc.c
        my_libft/ft_memccpy.c
        my_libft/ft_memchr.c
        my_libft/ft_memcmp.c
        my_libft/ft_memcpy.c
        my_libft/ft_memdel.c
        my_libft/ft_memmove.c
        my_libft/ft_memset.c
        my_libft/ft_pgcd.c
        my_libft/ft_plcm.c
        my_libft/ft_putchar.c
        my_libft/ft_putchar_fd.c
        my_libft/ft_putendl.c
        my_libft/ft_putendl_fd.c
        my_libft/ft_putnbr.c
        my_libft/ft_putnbr_fd.c
        my_libft/ft_putstr.c
        my_libft/ft_putstr_fd.c
        my_libft/ft_signum.c
        my_libft/ft_strcat.c
        my_libft/ft_strchr.c
        my_libft/ft_strclr.c
        my_libft/ft_strcmp.c
        my_libft/ft_strcpy.c
        my_libft/ft_strdel.c
        my_libft/ft_strdup.c
        my_libft/ft_strequ.c
        my_libft/ft_striter.c
        my_libft/ft_striteri.c
        my_libft/ft_strjoin.c
        my_libft/ft_strlcat.c
        my_libft/ft_strlen.c
        my_libft/ft_strmap.c
        my_libft/ft_strmapi.c
        my_libft/ft_strncat.c
        my_libft/ft_strncmp.c
        my_libft/ft_strncpy.c
        my_libft/ft_strndup.c
        my_libft/ft_strnequ.c
        my_libft/ft_strnew.c
        my_libft/ft_strnstr.c
        my_libft/ft_strrchr.c
        my_libft/ft_strsplit.c
        my_libft/ft_strstr.c
        my_libft/ft_strsub.c
        my_libft/ft_strtrim.c
        my_libft/ft_tolower.c
        my_libft/ft_toupper.c
        my_libft/ft_trim.c
        my_libft/functions1.c
        my_libft/functions3.c
        my_libft/functions4.c
        my_libft/get_next_line.c
        my_libft/libft.h
        my_libft/print_double.c
        my_libft/process_sp1.c
        my_libft/process_sp2.c
        my_libft/process_sp3.c
        my_libft/process_sp4.c
        my_libft/process_sp5.c
        my_libft/put_d1.c
        my_libft/put_d2.c
        my_libft/put_d3.c
        my_libft/put_d4.c
        my_libft/put_d5.c
        my_libft/put_double0.c
        my_libft/put_double1.c
        my_libft/put_double2.c
        my_libft/put_ee1.c
        my_libft/put_ee2.c
        my_libft/put_ee3.c
        my_libft/put_f1.c
        my_libft/put_f2.c
        my_libft/put_f3.c
        my_libft/put_long_dbl1.c
        my_libft/put_long_dbl2.c
        my_libft/put_long_dbl3.c
        my_libft/put_long_e.c
        my_libft/put_o_u_x1.c
        my_libft/put_o_u_x2.c
        my_libft/put_p.c
        my_libft/put_strings1.c
        my_libft/put_strings2.c
        my_libft/two.c
        dfs.c
        graph.c
        hash.c
        init.c
        lem_in.c
        lem_in.h
        link.c
        read_map.c
        stack_func.c
        vertex.c)
